--- a/src/app/admin/layout/navigation-menu/navigation-menu.component.html
+++ b/src/app/admin/layout/navigation-menu/navigation-menu.component.html
@@ -17,6 +17,7 @@
             <span class="menu-item-label tw-text-gray">List</span>
         </div>
         <div class="layout-wrapper" routerLink="../admin/list-management">
+            <!-- <fa-icon icon="stamp" size="2x"></fa-icon> -->
             <img src="assets/images/rubber-stamp.svg">
             <span class="menu-item-label tw-text-gray">Approvals</span>
         </div>
