--- a/src/app/admin/berths/berths-list/berths-list.component.html
+++ b/src/app/admin/berths/berths-list/berths-list.component.html
@@ -120,7 +120,7 @@
                         <select (change)="filterByStatus($event)" filter-select>
                             <option value="" selected>Select</option>
                             <option [value]="true">Active</option>
-                            <option [value]="false">Inactive</option>
+                            <option [value]="false">In Active</option>
                         </select>
                     </section>
                   </th>
@@ -128,7 +128,7 @@
                     <mat-chip [ngClass]="{
                       '!tw-bg-green-200': row.status,
                       '!tw-bg-red-200': !row.status
-                    }">{{row.status ? 'active' : 'inactive'}}</mat-chip>
+                    }">{{row.status ? 'Active' : 'In Active'}}</mat-chip>
                   </td>
                     </ng-container>
 
