--- a/src/app/admin/map/map.component.html
+++ b/src/app/admin/map/map.component.html
@@ -45,7 +45,10 @@
     (mapClick)="addMarker($event)"
     (mapMousemove)="move($event)"
 >
-<map-ground-overlay [url]="imageUrl" [bounds]="searchCard"></map-ground-overlay>
+<div class="tw-bg-white">Hi
+    <p>irtoisetosieutoeutetoeut</p>
+</div>
+<!-- <map-ground-overlay [url]="imageUrl" [bounds]="searchCard"></map-ground-overlay> -->
 
     <!-- Map Markers -->
     <map-marker
