--- a/src/app/operator/scheduling/add-scheduling/add-scheduling.component.html
+++ b/src/app/operator/scheduling/add-scheduling/add-scheduling.component.html
@@ -375,7 +375,7 @@
                 <input class="tw-text-center tw-w-full tw-outline-0 tw-shadow-none tw-ring-offset-0 focus:tw-ring-offset-0 focus:tw-shadow-none focus:tw-ring-0 tw-min-h-[53px] tw-border-x-0 tw-border-borderColor	tw-rounded-x-0"
                 type="text" [value]="file1Text$ | async" (click)="file1.click()" readonly placeholder="Choose file">
                 <input #file1 hidden type="file" (change)="patchFile($any($event.target).files, 0)">
-                <button (click)="file1.click()" class="tw-bg-primary tw-text-white hover:tw-bg-primary-dark tw-min-h-[53px] min-md:tw-min-w-[60px] max-sm:tw-w-full tw-rounded">
+                <button (click)="file1.click()" class="tw-bg-primary tw-text-white  tw-min-h-[53px] min-md:tw-min-w-[60px] max-sm:tw-w-full tw-rounded">
                   <fa-icon icon="upload" size="2x"
                       class="tw-mx-2 tw-cursor-pointer tw-text-white">
                   </fa-icon>
@@ -390,7 +390,7 @@
                 <input class="tw-text-center tw-w-full tw-outline-0 tw-shadow-none tw-ring-offset-0 focus:tw-ring-offset-0 focus:tw-shadow-none focus:tw-ring-0 tw-min-h-[53px] tw-border-x-0 tw-border-borderColor	tw-rounded-x-0"
                 type="text" [value]="file2Text$ | async" (click)="file2.click()" readonly placeholder="Choose file">
                 <input #file2 hidden type="file" (change)="patchFile($any($event.target).files, 1)">
-                <button (click)="file2.click()" class="tw-bg-primary tw-text-white hover:tw-bg-primary-dark tw-min-h-[53px] min-md:tw-min-w-[60px] max-sm:tw-w-full tw-rounded">
+                <button (click)="file2.click()" class="tw-bg-primary tw-text-white  tw-min-h-[53px] min-md:tw-min-w-[60px] max-sm:tw-w-full tw-rounded">
                   <fa-icon icon="upload" size="2x"
                       class="tw-mx-2 tw-cursor-pointer tw-text-white">
                   </fa-icon>
@@ -405,7 +405,7 @@
                 <input class="tw-text-center tw-w-full tw-outline-0 tw-shadow-none tw-ring-offset-0 focus:tw-ring-offset-0 focus:tw-shadow-none focus:tw-ring-0 tw-min-h-[53px] tw-border-x-0 tw-border-borderColor	tw-rounded-x-0"
                 type="text" [value]="file3Text$ | async" (click)="file3.click()" readonly placeholder="Choose file">
                 <input #file3 hidden type="file" (change)="patchFile($any($event.target).files, 2)">
-                <button (click)="file3.click()" class="tw-bg-primary tw-text-white hover:tw-bg-primary-dark tw-min-h-[53px] min-md:tw-min-w-[60px] max-sm:tw-w-full tw-rounded">
+                <button (click)="file3.click()" class="tw-bg-primary tw-text-white  tw-min-h-[53px] min-md:tw-min-w-[60px] max-sm:tw-w-full tw-rounded">
                   <fa-icon icon="upload" size="2x"
                       class="tw-mx-2 tw-cursor-pointer tw-text-white">
                   </fa-icon>
