--- a/src/app/admin/layout/navigation-menu/navigation-menu.component.scss
+++ b/src/app/admin/layout/navigation-menu/navigation-menu.component.scss
@@ -62,6 +62,11 @@
     font-size: 0.7rem;
     @apply min-md:tw-text-base;
   }
+  > i {
+    color: #1B9FE8;
+    font-size: 0.7rem;
+    @apply min-md:tw-text-base;
+  }
 
   > .menu-item-label {
     display: none;
@@ -79,6 +84,9 @@
     fa-icon {
       color: white;
     }
+    i {
+      color: white;
+    }
 
     .menu-item-label {
       color: white;
@@ -88,4 +96,8 @@
       background: #FFF;
     }
   }
+
 }
+
+
+
