--- a/src/app/admin/users/users-list/users-list.component.html
+++ b/src/app/admin/users/users-list/users-list.component.html
@@ -6,14 +6,14 @@
             <button
                 routerLink="../add"
                 [disabled]="(isLoading$ | async) || false"
-                class="tw-bg-primary tw-text-white hover:tw-bg-primary-dark tw-py-2 tw-min-h-[35px] min-md:tw-min-w-[120px] max-sm:tw-w-full tw-rounded-l max-lg:tw-w-full"
+                class="tw-bg-primary tw-text-white  tw-py-2 tw-min-h-[35px] min-md:tw-min-w-[120px] max-sm:tw-w-full tw-rounded-l max-lg:tw-w-full"
                 type="button"
             >
                 Add Berth
             </button>
             <button
                 [disabled]="(isLoading$ | async) || false"
-                class="tw-bg-primary tw-text-white hover:tw-bg-primary-dark tw-min-h-[35px] min-md:tw-min-w-[30px] max-sm:tw-w-full tw-rounded-r"
+                class="tw-bg-primary tw-text-white  tw-min-h-[35px] min-md:tw-min-w-[30px] max-sm:tw-w-full tw-rounded-r"
                 type="button"
                 [matMenuTriggerFor]="menu"
             >
@@ -35,12 +35,17 @@
             </mat-menu>
         </mat-button-toggle-group>
     </div>
-    <material-panel-table
+    <!-- <material-panel-table
         [showSearchbar]="false"
         [showHeader]="true"
         buttonLabel="Add User"
         tableTitle="Users list"
         (buttonClicked)="redirectAddUser()"
+    > -->
+    <material-panel-table
+        [showSearchbar]="false"
+        [showHeader]="true"
+        tableTitle="Users list"
     >
         <div table class="tw-w-full tw-shadow-lg">
             <ng-scrollbar track="horizontal" [autoHeightDisabled]="false">
