--- a/src/app/admin/companies/companies-add-edit/companies-add-edit.component.html
+++ b/src/app/admin/companies/companies-add-edit/companies-add-edit.component.html
@@ -92,7 +92,7 @@
             <div>
                 <h6 class="tw-font-bold">Address</h6>
                 <div class="min-xl:tw-columns-3">
-                    <div class="tw-h-[110px]">
+                    <div class="tw-h-[90px]">
                         <div
                             iconic-input-wrapper
                             leftIcon="location-crosshairs"
@@ -106,7 +106,7 @@
                             />
                         </div>
                     </div>
-                    <div class="tw-h-[110px]">
+                    <div class="tw-h-[90px]">
                         <div class="min-md:tw-flex tw-gap-2">
                             <div class="tw-flex-2">
                                 <div iconic-input-wrapper>
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tw-h-[110px]">
+                    <div class="tw-h-[90px]">
                         <div class="min-md:tw-flex tw-gap-2">
                             <div class="tw-flex-1">
                                 <div iconic-input-wrapper>
@@ -168,7 +168,7 @@
             </div>
             <div>
                 <h6 class="tw-font-bold">Contact</h6>
-                <div class="tw-py-[100px]">
+                <div class="tw-mt-10">
                     <table class="table tw-border tw-border-lightgray">
                         <thead>
                             <tr>
