--- a/src/app/admin/map/map.component.html
+++ b/src/app/admin/map/map.component.html
@@ -1,3 +1,9 @@
+<div id="map" style="height: 750px; width: 100%;"></div>
+<app-search id="search"></app-search>
+
+
+
+
 <!-- <section>
     <header
         class="tw-flex min-md:tw-flex-row tw-flex-col tw-justify-between tw-pb-2"
@@ -28,15 +34,14 @@
 <!-- <div>Latitude: {{ display?.lat }}</div>
 <div>Longitude: {{ display?.lng }}</div> -->
 
-
-<section>
+<!-- <section>
     <header class="tw-flex min-md:tw-flex-row tw-flex-col tw-justify-between tw-pb-2">
         <h3 class="heading-3 tw-font-bold">Map</h3>
-    </header>
+    </header> -->
     <!-- Search Input -->
     <!-- <input type="text" [(ngModel)]="searchQuery" placeholder="Search location" />
     <button (click)="searchLocation()">Search</button> -->
-</section>
+<!-- </section>
 <google-map
     height="470px"
     width="100%"
@@ -45,13 +50,17 @@
     (mapClick)="addMarker($event)"
     (mapMousemove)="move($event)"
 >
-<div class="tw-bg-white">Hi
-    <p>irtoisetosieutoeutetoeut</p>
-</div>
+<div class="search tw-bg-white">Hi -->
+    <!-- <app-search></app-search> -->
+<!-- </div>
+<div class="overlay-content"> -->
+    <!-- Content to overlay on the map -->
+    <!-- <h1>This is an overlay</h1>
+  </div> -->
 <!-- <map-ground-overlay [url]="imageUrl" [bounds]="searchCard"></map-ground-overlay> -->
 
     <!-- Map Markers -->
-    <map-marker
+    <!-- <map-marker
         #marker="mapMarker"
         *ngFor="let markerPosition of markerPositions"
         [position]="markerPosition"
@@ -61,4 +70,4 @@
         {{ markerPosition.lat }}
         {{ markerPosition.lng }}
     </map-info-window>
-</google-map>
+</google-map> -->
